--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.12"
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "ant-design-vue": "^4.2.6",
+    "axios": "^1.7.7",
+    "vue": "^3.5.12",
+    "vue-router": "^4.4.5",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuetify": "^3.7.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.4.8"
   }
 }
